tests/neg-inline-trait/disallow-val-in-inline-trait.scala
inline trait Foo:
    val foo: Any // error
